kubernetes/manifests/prod-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app
  namespace: prod-services
spec:
  selector:
    app: prod-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
