kubernetes/manifests/prod-services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-app
  namespace: prod-services
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - host: prod.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-app
                port:
                  number: 80
